--- a/src/app/sql/sql.component.html
+++ b/src/app/sql/sql.component.html
@@ -1,3 +1,73 @@
-<p>
-  sql works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Bar Modification Area</h1>
+    <p class="lead"> This can be used to Update/Delete/Insert into the Bar Table.</p>
+
+    <textarea rows="5" cols="100" pInputTextarea></textarea>
+    <br><br>
+      <p-button label="Execute"></p-button>
+
+  </div>
+</div>
+<br><br>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Beer Modification Area</h1>
+    <p class="lead"> This can be used to Update/Delete/Insert into the Beer Table.</p>
+
+    <textarea rows="5" cols="100" pInputTextarea></textarea>
+    <br><br>
+      <p-button label="Execute"></p-button>
+
+  </div>
+</div>
+<br><br>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Drinker Modification Area</h1>
+    <p class="lead"> This can be used to Update/Delete/Insert into the Drinker Table.</p>
+
+    <textarea rows="5" cols="100" pInputTextarea></textarea>
+    <br><br>
+      <p-button label="Execute"></p-button>
+
+  </div>
+</div>
+<br><br>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Bartender Modification Area</h1>
+    <p class="lead"> This can be used to Update/Delete/Insert into the Bartender Table.</p>
+
+    <textarea rows="5" cols="100" pInputTextarea></textarea>
+    <br><br>
+      <p-button label="Execute"></p-button>
+
+  </div>
+</div>
+<br><br>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Manufacturer Modification Area</h1>
+    <p class="lead"> This can be used to Update/Delete/Insert into the Manufacturer Table.</p>
+
+    <textarea rows="5" cols="100" pInputTextarea></textarea>
+    <br><br>
+      <p-button label="Execute"></p-button>
+
+  </div>
+</div>
+<br><br>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Transactions Modification Area</h1>
+    <p class="lead"> This can be used to Update/Delete/Insert into the Transactions Table.</p>
+
+    <textarea rows="5" cols="100" pInputTextarea></textarea>
+    <br><br>
+      <p-button label="Execute"></p-button>
+
+  </div>
+</div>
+<br><br>
+
