--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Bar Beer Drinker</a>
+  <a class="navbar-brand" routerLink="">Bar Beer Drinker</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,6 +28,9 @@
         </li>
       <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/insight">Insight</a>
+        </li>
+      <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/verify">Verification Interface</a>
         </li>
     </ul>
   </div>
