--- a/src/app/manufacturer/manufacturer.component.html
+++ b/src/app/manufacturer/manufacturer.component.html
@@ -1,3 +1,32 @@
-<p>
-  manufacturer works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Select A Manufacturer</h1>
+    <p class="lead"> This can be used to see the cities with the most sales of:. {{selectedManf}}</p>
+    <p-dropdown *ngIf="manfOptions" [ngClass]="{ 'no-option-selected': selectedManf === undefined || selectedManf === null }"
+      placeholder="Filter by Manufacturer" [options]="manfOptions" [(ngModel)]="selectedManf" showClear="true" filter=true
+      (onChange)="filterManf($event.value)"></p-dropdown>
+  </div>
+</div>
+<div class ="container">
+  <br>
+  <div id="bargraphCities">
+    
+  </div>
+</div>
+<br><br>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4"> Select A Manufacturer</h1>
+    <p class="lead"> This can be used to see the cities with the most sales of:. {{selectedManf1}} during the month of October</p>
+    <p-dropdown *ngIf="manfOptions" [ngClass]="{ 'no-option-selected': selectedManf1 === undefined || selectedManf1 === null }"
+      placeholder="Filter by Manufacturer" [options]="manfOptions" [(ngModel)]="selectedManf1" showClear="true" filter=true
+      (onChange)="filterManfCity($event.value)"></p-dropdown>
+  </div>
+</div>
+<div class ="container">
+  <br>
+  <div id="bargraphTopCities">
+    
+  </div>
+</div>
+<br><br>
